--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react": "^16.4.2",
     "source-map-support": "^0.5.6",
     "tslint": "^5.11.0",
-    "typescript": "3.1.6"
+    "typescript": "3.4.x"
   },
   "files": [
     "lib",
